# biginteger

./: .gitignore  AGENTS.md  BENCHMARK.md  BUILDING.md  BigInteger.c  BigInteger.h  BigIntegerBuilder.h  BigIntegerComparator.h  BigIntegerIO.h  BigIntegerOperations.h  BigIntegerParser.h  BigIntegerUtil.h  CLAUDE.md  CMakeLists.txt  ClassicalAlgorithms.h  FastAlgorithms.h  KaratsubaAlgorithm.h  KaratsubaAlgorithm2.h  PerfTestGenerator.java  README.md  StackPool.h  ToomCookAlgorithm.h  ToomCookData.h  bigdebug.cpp  bigtst.cpp  bigtst.sln  bigtst.vcxproj  division_improvement_plan.md  dttest.cpp  multiplication_improvement_plan.md  perfkaratcutoff.cpp  performance_improvement_plan.md  perftest.xlsx  perftoomparam.cpp  perftst.cpp  test.ans  test.in  test1.prof  test2.ans  test2.prof  (+5 more)
.github/workflows/: build.yml  qa.yaml
algorithms/: BigIntegerUtil.h  CommonAlgorithms.h
algorithms/addition/: ClassicAddition.h
algorithms/burnikelziegler/: BurnikelZieglerDivision.h
algorithms/classic/: ClassicAddition.h  ClassicDivision.h  ClassicMultiplication.h  ClassicSubtraction.h  CommonAlgorithms.h  README.md
algorithms/division/: BarrettDivision.h  ClassicDivision.h  MontgomeryDivision.h  NewtonRaphsonDivision.h
algorithms/divison/: ClassicDivision.h  KnuthDivision.h  MontgomeryDivision.h  MontgomeryDivision2.h  NewtonRaphsonDivision.h
algorithms/karatsuba/: KaratsubaMultiplication.h  README.md
algorithms/multiplication/: ClassicMultiplication.h  FFTMultiplication.h  KaratsubaMultiplication.h  ToomCookBigIntegerMultiplication.h  ToomCookKnuthMultiplication.h  ToomCookMultiplication.h  ToomCookMultiplication2.h  ToomCookMultiplication2a.h
algorithms/newtonraphson/: NewtonRaphsonDivision.h  NewtonRaphsonDivision2.h
algorithms/schonhagestrassen/: README.md  SchonhageStrassenMultiplication.h
algorithms/stonehagestrassen/: FFTMultiplication.h
algorithms/subtraction/: ClassicSubtraction.h
algorithms/toomcook/: README.md  StackPool.h  ToomCookData.h  ToomCookMultiplication.h  ToomCookMultiplication2.h  ToomCookMultiplication2a.h  ToomCookMultiplicationAlt.h  toomworkbook.xlsm
algorithms/toomcook2/: ToomCookMultiplication2.h  ToomCookMultiplication2a.h
algorithms/toomcookalt/: ToomCookMultiplication.h
algorithms/toomcookmemoptim/: StackPool.h  ToomCookData.h  ToomCookDataMemOptimized.h  ToomCookMultiplicationMemOptimized.h
bigdecimal/: BigDecimal.cpp
biginteger/: BigInteger.h
biginteger/algorithms/: Addition.h  BaseConversion.h  Division.h  Multiplication.h  Shift.h  Squaring.h  Subtraction.h
biginteger/biginteger.xcodeproj/: project.pbxproj
biginteger/common/: Builder.h  Comparator.h  Constants.h  Parser.h  Util.h
biginteger/ops/: Addition.h  ClassicMultiplication.h  Comparison.h  Division.h  IO.h  Multiplication.h  ScalarDivision.h  ScalarMultiplication.h  Shift.h  Subtraction.h
calculator/: ExpressionEvaluator.h  calculator.cpp
docs/: BASE.md  BIGDECIMAL.md  DIVISION.md  MULTIPLICATION.md  MULTIPLICATION_OPTIMIZATION_PLAN.md  STRING_CONVERSION.md  THREAD_SAFETY.md
include/bigdecimal/: BigDecimal.h  RoundingMode.h
include/biginteger/: BigInteger.h
include/biginteger/common/: Builder.h  (+5 more)
ops/: BigIntegerAddition.h  BigIntegerClassicDivision.h  BigIntegerClassicMultiplication.h  BigIntegerComparison.h  BigIntegerDivision.h  BigIntegerIO.h  BigIntegerMultiplication.h  BigIntegerOperations.h  BigIntegerScalarDivision.h  BigIntegerScalarMultiplication.h  BigIntegerShift.h  BigIntegerSubtraction.h  MultiplicationStrategy.h
src/algorithms/: Addition.cpp  BaseConversion.cpp  Division.cpp  Multiplication.cpp  Squaring.cpp  Subtraction.cpp
src/common/: Parallel.cpp  Parser.cpp
src/ops/: Addition.cpp  ClassicMultiplication.cpp  Division.cpp  IO.cpp  Multiplication.cpp  ScalarDivision.cpp  Subtraction.cpp
tests/: PerfTestGenerator.java  algotest.cpp  bigdecimal_perf.cpp  bigtst.cpp  debug.cpp  debug_kara.cpp  div_correctness.cpp  divperf_simple.cpp  mult_correctness.cpp  multperf_simple.cpp  multtest.cpp  time.csv  toomtest.cpp
tests/performance/: DivPerfTestGenerator.java  MultPerfTestGenerator.java  bench_vs_gmp.cpp  dispatch_tuner.cpp  division_shape_bench.cpp  divperf.cpp  karatsuba_cutoff.xlsx  karatsubacutoff.cpp  mfa_correctness.cpp  mfa_dft_check.cpp  mfa_roundtrip.cpp  mfa_vs_gmp_check.cpp  mul_xl_bench.cpp  multiplication_shape_bench.cpp  multperf.cpp  multperf2.cpp  perfanalysis.cpp  performancetest.xlsx  performancetest2.xlsx  perftest.cpp  perftest2.cpp  prepared_ntt_bench.cpp  tostring_bench.cpp
tests/stress/: stresstest.cpp  testgenerator.java  testgenerator2.java
tests/unit/: test_addition_subtraction.cpp  test_algorithms_crosscheck.cpp  test_base64_addsub.cpp  test_base64_div.cpp  test_base64_kara_ntt.cpp  test_base64_mult.cpp  test_bigdecimal.cpp  test_comparison.cpp  test_construction.cpp  test_division.cpp  test_evaluator.cpp  test_main.cpp  test_multiplication.cpp  test_prepared_cached_apis.cpp  test_shift.cpp  test_string_conversion.cpp  test_utility_builder.cpp  unit_test_framework.h
(+71 files in other folders)
